--- a/docs/zz_generated.applicationDefinition.ce.yaml
+++ b/docs/zz_generated.applicationDefinition.ce.yaml
@@ -30,6 +30,9 @@ spec:
                 # The key of the secret to select from. Must be a valid secret key.
                 key: pass
                 # Name of the referent.
+                # This field is effectively required, but due to backwards compatibility is
+                # allowed to be empty. Instances of this type with an empty value here are
+                # almost certainly wrong.
                 # More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
                 name: <<secret-name>>
                 # Specify whether the Secret or its key must be defined
@@ -41,6 +44,9 @@ spec:
                 # The key of the secret to select from. Must be a valid secret key.
                 key: private-key
                 # Name of the referent.
+                # This field is effectively required, but due to backwards compatibility is
+                # allowed to be empty. Instances of this type with an empty value here are
+                # almost certainly wrong.
                 # More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
                 name: <<secret-name>>
                 # Specify whether the Secret or its key must be defined
@@ -52,6 +58,9 @@ spec:
                 # The key of the secret to select from. Must be a valid secret key.
                 key: token
                 # Name of the referent.
+                # This field is effectively required, but due to backwards compatibility is
+                # allowed to be empty. Instances of this type with an empty value here are
+                # almost certainly wrong.
                 # More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
                 name: <<secret-name>>
                 # Specify whether the Secret or its key must be defined
@@ -63,6 +72,9 @@ spec:
                 # The key of the secret to select from. Must be a valid secret key.
                 key: user
                 # Name of the referent.
+                # This field is effectively required, but due to backwards compatibility is
+                # allowed to be empty. Instances of this type with an empty value here are
+                # almost certainly wrong.
                 # More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
                 name: <<secret-name>>
                 # Specify whether the Secret or its key must be defined
@@ -101,6 +113,9 @@ spec:
                 # The key of the secret to select from. Must be a valid secret key.
                 key: pass
                 # Name of the referent.
+                # This field is effectively required, but due to backwards compatibility is
+                # allowed to be empty. Instances of this type with an empty value here are
+                # almost certainly wrong.
                 # More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
                 name: <<secret-name>>
                 # Specify whether the Secret or its key must be defined
@@ -113,6 +128,9 @@ spec:
                 # The key of the secret to select from. Must be a valid secret key.
                 key: .dockerconfigjson
                 # Name of the referent.
+                # This field is effectively required, but due to backwards compatibility is
+                # allowed to be empty. Instances of this type with an empty value here are
+                # almost certainly wrong.
                 # More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
                 name: <<secret-name>>
                 # Specify whether the Secret or its key must be defined
@@ -124,6 +142,9 @@ spec:
                 # The key of the secret to select from. Must be a valid secret key.
                 key: user
                 # Name of the referent.
+                # This field is effectively required, but due to backwards compatibility is
+                # allowed to be empty. Instances of this type with an empty value here are
+                # almost certainly wrong.
                 # More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
                 name: <<secret-name>>
                 # Specify whether the Secret or its key must be defined
