--- a/pkg/crd/k8c.io/kubermatic.k8c.io_seeds.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_seeds.yaml
@@ -923,8 +923,8 @@ spec:
                                     - name
                                   type: object
                                 type: array
-                              singleNamespaceMode:
-                                description: SingleNamespaceMode enables the single namespace mode for all user-clusters in the KubeVirt datacenter.
+                              namespacedMode:
+                                description: NamespacedMode enables the single namespace mode for all user-clusters in the KubeVirt datacenter.
                                 type: boolean
                             type: object
                           machineFlavorFilter:
