--- a/docs/zz_generated.seed.ee.yaml
+++ b/docs/zz_generated.seed.ee.yaml
@@ -186,8 +186,8 @@ spec:
               # storageclass.kubernetes.io/is-default-class : false
               isDefaultClass: true
               name: rook-ceph-block
-          # SingleNamespaceMode enables the single namespace mode for all user-clusters in the KubeVirt datacenter.
-          singleNamespaceMode: false
+          # NamespacedMode enables the single namespace mode for all user-clusters in the KubeVirt datacenter.
+          namespacedMode: false
         # Optional: MachineFlavorFilter is used to filter out allowed machine flavors based on the specified resource limits like CPU, Memory, and GPU etc.
         machineFlavorFilter:
           # Include VMs with GPU
