--- a/pkg/crd/k8c.io/kubermatic.k8c.io_seeds.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_seeds.yaml
@@ -977,6 +977,9 @@ spec:
                                     - name
                                   type: object
                                 type: array
+                              namespacedMode:
+                                description: NamespacedMode enables the single namespace mode for all user-clusters in the KubeVirt datacenter.
+                                type: boolean
                             type: object
                           machineFlavorFilter:
                             description: 'Optional: MachineFlavorFilter is used to filter out allowed machine flavors based on the specified resource limits like CPU, Memory, and GPU etc.'
