make NetworkPolicy optional the best way I could come up with if we still want to manage it via Helm

--- a/addons/kube-state-metrics/Makefile
+++ b/addons/kube-state-metrics/Makefile
@@ -28,6 +28,7 @@ build:
 	  --values helm-values \
 	  > $(OUTPUT_FILE)
 	../templatify.sh $(OUTPUT_FILE)
+	git apply --no-unsafe-paths --no-recount customizations.patch
 
 .PHONY: setup-helm
 setup-helm:
