--- a/addons/kube-state-metrics/kube-state-metrics.yaml
+++ b/addons/kube-state-metrics/kube-state-metrics.yaml
@@ -1,3 +1,4 @@
+{{ if .Cluster.Features.Has "kubeSystemNetworkPolicies" }}
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
@@ -37,6 +38,7 @@ spec:
     - Ingress
     - Egress
 ---
+{{ end }}
 apiVersion: policy/v1beta1
 kind: PodDisruptionBudget
 metadata:
